[project]
name = "rtvc-lite"
version = "0.1.0"
description = "Minimal SV2TTS-style pipeline (encoder → synthesizer → vocoder)"
requires-python = ">=3.9"

dependencies = [
  "torch>=2.2",
  "torchaudio>=2.2",
  "numpy>=1.24",
  "librosa>=0.10",
  "soundfile>=0.12",
  "tqdm>=4.65",
  "click>=8.1",
]

[tool.uv]
# if you use uv: `uv pip install -e .`
